Fixed z-index for top bar

--- a/sites/all/themes/fj16/css/fj16.css
+++ b/sites/all/themes/fj16/css/fj16.css
@@ -521,32 +521,33 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px; }
+    height: 50px;
+    z-index: 50; }
     @media only screen and (max-width: 767px) {
       /* line 110, ../sass/_header.scss */
       #header #top-bar {
         background: #000; } }
-    /* line 123, ../sass/_header.scss */
+    /* line 125, ../sass/_header.scss */
     #header #top-bar ul {
       padding: 0;
       list-style-type: none; }
       @media only screen and (max-width: 767px) {
-        /* line 123, ../sass/_header.scss */
+        /* line 125, ../sass/_header.scss */
         #header #top-bar ul {
           display: none; } }
-      /* line 133, ../sass/_header.scss */
+      /* line 135, ../sass/_header.scss */
       #header #top-bar ul li {
         display: inline-block;
         padding: 0 20px;
         line-height: 50px; }
-        /* line 138, ../sass/_header.scss */
+        /* line 140, ../sass/_header.scss */
         #header #top-bar ul li a {
           color: #000; }
-    /* line 144, ../sass/_header.scss */
+    /* line 146, ../sass/_header.scss */
     #header #top-bar #mobile-menu-toggle {
       display: none; }
       @media only screen and (max-width: 767px) {
-        /* line 144, ../sass/_header.scss */
+        /* line 146, ../sass/_header.scss */
         #header #top-bar #mobile-menu-toggle {
           display: block;
           height: 50px;
@@ -555,20 +556,20 @@ body {
           position: absolute;
           top: 0;
           right: 0; }
-          /* line 156, ../sass/_header.scss */
+          /* line 158, ../sass/_header.scss */
           #header #top-bar #mobile-menu-toggle span {
             display: block;
             width: 40px;
             height: 5px;
             margin-top: 6px;
             background: #fff; }
-            /* line 163, ../sass/_header.scss */
+            /* line 165, ../sass/_header.scss */
             #header #top-bar #mobile-menu-toggle span:first-child {
               margin-top: 2px; } }
-  /* line 171, ../sass/_header.scss */
+  /* line 173, ../sass/_header.scss */
   #header #bg-slides {
     display: none; }
-  /* line 175, ../sass/_header.scss */
+  /* line 177, ../sass/_header.scss */
   #header #to-content {
     display: none; }
 
