--- a/sites/all/themes/fj16/sass/_header.scss
+++ b/sites/all/themes/fj16/sass/_header.scss
@@ -115,6 +115,8 @@
 		width: 100%;
 		height: 50px;
 
+		z-index: 50;
+
 		@include respond(mobile) {
 			background: #000;
 		}
